# wildberries-async-api-client

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Makefile  README.md  openapi.json  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AdvV0AllcpmPost200ResponseInner.md  AdvV0AllcpmPost200ResponseInnerCpmInner.md  AdvV0AllcpmPostRequest.md  AdvV0CpmGet200ResponseInner.md  AdvV0CpmPostRequest.md  AdvV0ParamsMenuGet200ResponseInner.md  AdvV0ParamsSetGet200ResponseInner.md  AdvV0ParamsSubjectGet200ResponseInner.md  AdvV0RenamePostRequest.md  AdvV1AdvertGet200Response.md  AdvV1AdvertGet200ResponseExtended.md  AdvV1AdvertGet200ResponseItemsInner.md  AdvV1AdvertGet200ResponseItemsInnerShowHoursInner.md  AdvV1AdvertPausePostRequest.md  AdvV1AdvertStartPostRequest.md  AdvV1AdvertStopPostRequest.md  AdvV1AdvertsGet200ResponseInner.md  AdvV1AutoActivePostRequest.md  AdvV1AutoSetExcludedPostRequest.md  AdvV1AutoStatGet200Response.md  AdvV1AutoUpdatenmPostRequest.md  AdvV1BalanceGet200Response.md  AdvV1BudgetDepositPost200Response.md  AdvV1BudgetDepositPostRequest.md  AdvV1BudgetGet200Response.md  AdvV1CountGet200Response.md  AdvV1CountGet200ResponseAdverts.md  AdvV1ItemCpmChangePostRequest.md  AdvV1PaymentsGet200ResponseInner.md  AdvV1PromotionAdvertsPost200Response.md  AdvV1PromotionCountGet200Response.md  AdvV1PromotionCountGet200ResponseAdvertsInner.md  AdvV1PromotionCountGet200ResponseAdvertsInnerAdvertListInner.md  AdvV1SaveAdPost400Response.md  AdvV1SaveAdPostRequest.md  AdvV1SeacatStatGet200Response.md  AdvV1SeacatStatGet200ResponseDatesInner.md  AdvV1SearchSetExcludedPostRequest.md  (+457 more)
(+1525 files in other folders)
