[tool.poetry]
name = "wildberries-async-api-client"
version = "0.1.0"
description = ""
authors = ["50bytes.dev <50bytes.dev@gmail.com>"]
readme = "README.md"
#package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohttp = "^3.9.5"

pydantic = "^2.7.2"


[tool.poerty.dev-dependencies]
openapi-python-generator = { path = "../openapi-python-generator", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
