[project]
name = "wildberries-async-api-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.12.15", "pydantic>=2.11.7"]

[tool.setuptools]
package-dir = { "" = "src" }

[dependency-groups]
dev = ["openapi-python-generator"]

[tool.uv.sources]
openapi-python-generator = { path = "../openapi-python-generator", editable = true }
